# ClipScope

./: .env.example  .gitignore  AGENTS.md  ClipScope.spec  LICENSE  README.md  THIRD_PARTY_LICENSES.md  pyproject.toml  requirements.txt  version.json
app/: __init__.py  main.py
app/application/: app_controller.py  auth_service.py  monitor_service.py  settings_service.py  update_service.py
app/clips/: __init__.py  clip_repository_service.py  selection_service.py
app/config/: __init__.py  constants.py  defaults.py
app/gui/: __init__.py  app_ui.py  main_page.py  notification_sound.py  settings_page.py  setup_page.py  update_ui.py
app/gui/components/: clip_table.py
app/models/: auth.py  clip.py  playback.py  settings.py  twitch_user.py  update.py
app/player/: __init__.py  player_page.py  server.py  state_endpoint.py
app/storage/: auth_repository.py  clips_repository.py  database.py  playback_repository.py  settings_repository.py
app/twitch/: __init__.py  api_client.py  auth_client.py  clips_service.py  user_service.py
docs/: booth_product_description_v1.0.0.md  release_checklist.md  release_notes_v0.1.0.md  release_notes_v0.1.1.md  release_notes_v0.1.2.md  release_notes_v0.1.3.md  release_notes_v0.1.4.md  release_notes_v0.1.5.md  release_notes_v0.1.6.md  release_notes_v0.1.7.md  release_notes_v0.1.8.md  release_notes_v0.1.9.md  release_notes_v1.0.0.md  requirements.md
tools/release/: build_windows.ps1  generate_third_party_licenses.py  package_windows.ps1
